# livecam

./: .gitignore  1 plan_cctv.txt  2plan_motion.txt  BLACKBOX.md  CLAUDE.md  CMakeLists.txt  CameraCapture.cpp  CameraCapture.hpp  DMA.txt  DMA적용.TXT  DebugUtils.cpp  DemoTest.cpp  DemoTestRpi.cpp  IMPLEMENTATION_ROADMAP.md  MODULE_ARCHITECTURE.md  Makefile  Makefile.old  Makefile.rpi  NETWORK_LOAD_ANALYSIS.md  PRD.md  PROPOSAL_DISTRIBUTED_CCTV.md  QUICK_START.md  README.md  README_C_COMPONENTS.md  RpiCameraCapture.cpp  RpiCameraCapture.hpp  TestCamera.cpp  TestCameraRpi.cpp  camera_capture.c  camera_capture.h  cctv_main.py  debug_utils  debug_utils.c  demo_test.c  demo_test_rpi  devdoc.txt  install.sh  integrated_controller.py  libcamera_capture.h  livecam_system_architecture.md  (+16 more)
demo/test_files/: frame_20250825_104443_001.yuv
docs/: CAMERA_USAGE_GUIDE.md  CLAUDE.md  DMA.txt  DMA_ANALYSIS_CORRECTION.md  INTEGRATION_NOTES.md  PRD.md  QUICK_START.md
reference/: cctv_main.py  hdcctv_main.py  install_dependencies.sh  q.txt  quest.txt  ref.txt  start_dual_blackbox.sh  start_dual_detection.sh
scripts/: capture_hd_video.sh  capture_test_videos.sh  comprehensive_camera_test.sh  cpu_monitor.sh  create_test_video.sh  dual_camera_test.sh  organize_project.sh  play_yuv.sh  simple_cpu_test.sh  start_blackbox.sh  test_dma.sh  test_hd_dma.sh
src/core/: RpiCameraCapture.cpp  TestCameraRpi.cpp
src/legacy/: DmaCapture640.cpp  DmaCaptureHD.cpp  RpiCamDirect.cpp  V4L2DirectCapture.cpp
src/optimized/: FixedMmapCapture.cpp  GpuVideoProcessor.cpp  IntegratedOptimizer.cpp  OptimizedCapture.cpp  OptimizedCapture.hpp
src/streaming/: stream_optimized.py  stream_optimized_30fps.py  stream_server.py  stream_with_control.py
videos/motion_events/cam0/250908/: concat_motion_event_cam0_20250908_101332.txt
videos/motion_events/cam1/250908/: concat_motion_event_cam1_20250908_101332.txt
web/: api.py
web/static/: index.html  script.js  style.css
